# stabledeath_backend

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker.yml
migrations/: 20260502153541_initial.down.sql  20260502153541_initial.sql  20260523185402_use_changelog_views.up.sql
src/: main.rs  server.rs
src/database/: mod.rs  models.rs
src/database/impls/: daily.rs  measurements.rs  mod.rs
src/routes/: bars.rs  graphs.rs  mod.rs
src/types/: mod.rs
