[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
apply = "0.3.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
axum-macros = { version = "0.5.0-rc.1"}
color-eyre = "0.6.5"
futures = "0.3.32"
rosu-v2 = { git = "https://github.com/Chiffario/rosu-v2" }
# polars = "0.53.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "derive", "sqlite", "macros", "chrono"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
axum-prometheus = "0.10.0"
metrics-exporter-prometheus = "0.18.3"
metrics = "0.24.5"
crypto = "0.5.1"
rustls = { version = "0.23.40", features = ["ring"] }
tower-http = { version = "0.6.10", features = ["trace"] }
mimalloc = "0.1.50"
